fix z-index

--- a/source/scss/blocks/popups.scss
+++ b/source/scss/blocks/popups.scss
@@ -499,7 +499,7 @@
   box-shadow: 0 4px 24px rgba(67, 108, 180, 0.39);
   border-radius: 15px;
   width: 402px;
-  z-index: 1000;
+  z-index: 22;
 
   .title {
     font-family: $main-font;
